--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Draft-Onepager für Referenzen (Logos, Bilder, Videos), Team, Prozess und Kontakt. Eine Marke der eFLY." />
 
     <style>
-      /* Pfeil-Icon am Impressum-Button animieren (dreht sich beim Öffnen um 180°) */
+      /* Pfeil-Icon am Impressum-Button animieren (dreht sich beim Öffnen 180°) */
       #toggle-impressum .chev { transition: transform 200ms ease; }
       #toggle-impressum[aria-expanded="true"] .chev { transform: rotate(180deg); }
     </style>
@@ -16,7 +16,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- TailwindCSS Play CDN für schnelles Prototyping -->
+    <!-- TailwindCSS CDN für schnelles Prototyping -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
