--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
         </div>
       </div>
     </section>    
-<!-- Team -->
-<section id="team" class="scroll-mt-24 py-16 sm:py-20 bg-white border-t border-slate-200">
+<!-- Team (Carousel) -->
+<section id="team" class="py-20 sm:py-28 bg-gradient-to-b from-white to-efly/[0.04] border-t border-slate-200">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-end justify-between gap-4">
       <div>
@@ -285,36 +285,63 @@
       </a>
     </div>
 
-    <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Card 1 -->
-      <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-soft">
-        <img class="w-full h-56 object-cover rounded-xl"
-             src="https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f63627a7ba28632f9a55_Moritz.png"
-             alt="Moritz" />
-        <h3 class="mt-4 font-semibold">Moritz</h3>
-        <p class="text-sm text-slate-600">Geschäftsführung</p>
-      </div>
+    <!-- Team Carousel -->
+    <div id="team-carousel" class="relative mt-8">
+      <div id="team-viewport" class="overflow-x-hidden overflow-y-hidden h-auto py-4">
+        <div id="team-track" class="flex items-center justify-center gap-0 will-change-transform transition-transform duration-300 ease-out">
+          
+<!-- LEFT profile (dimmed + arrow) -->
+<div class="basis-1/3 px-2 flex items-center justify-center">
+  <div id="team-left-frame"
+       class="relative group rounded-2xl overflow-hidden border border-slate-200 bg-white shadow transform-gpu transition cursor-pointer
+              opacity-75 scale-[0.94] md:scale-[0.92]">
+    <div id="team-left-content"></div>
+    <button id="team-left-arrow"
+            class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition"
+            aria-label="Zum vorherigen Profil">
+      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/90 border border-slate-300 shadow">
+        <i class="fa-solid fa-chevron-left"></i>
+      </span>
+    </button>
+  </div>
+</div>
 
-      <!-- Card 2 -->
-      <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-soft">
-        <img class="w-full h-56 object-cover rounded-xl"
-             src="https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f66660dd7064712fdc6b_Philipp.png"
-             alt="Phillipp" />
-        <h3 class="mt-4 font-semibold">Phillipp</h3>
-        <p class="text-sm text-slate-600">Head of People and Culture</p>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-soft">
-        <img class="w-full h-56 object-cover rounded-xl"
-             src="https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f67e7f1370c520ce363f_Paul.png"
-             alt="Paul" />
-        <h3 class="mt-4 font-semibold">Paul</h3>
-        <p class="text-sm text-slate-600">Head of Troubleshooting</p>
+<!-- CENTER profile (highlighted) -->
+<div class="basis-1/3 px-2 flex items-center justify-center">
+  <div class="transform-gpu scale-[1.06] md:scale-[1.10]">
+    <div class="rounded-2xl p-[2px] bg-gradient-to-r from-efly/70 to-efly/40">
+      <div id="team-center-frame"
+           class="relative rounded-2xl overflow-hidden border border-slate-200 bg-white shadow-lg ring-2 ring-efly/40 z-10">
+        <div id="team-center-content"></div>
       </div>
     </div>
   </div>
+</div>
+
+<!-- RIGHT profile (dimmed + arrow) -->
+<div class="basis-1/3 px-2 flex items-center justify-center">
+  <div id="team-right-frame"
+       class="relative group rounded-2xl overflow-hidden border border-slate-200 bg-white shadow transform-gpu transition cursor-pointer
+              opacity-75 scale-[0.94] md:scale-[0.92]">
+    <div id="team-right-content"></div>
+    <button id="team-right-arrow"
+            class="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition"
+            aria-label="Zum nächsten Profil">
+      <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/90 border border-slate-300 shadow">
+        <i class="fa-solid fa-chevron-right"></i>
+      </span>
+    </button>
+  </div>
+</div>
+
+
+        </div>
+      </div>
+    </div>
+
+  </div>
 </section>
+
 
     <!-- Footer mit Kontakt, Socials und Impressum-Dropdown -->
     <footer id="kontakt" class="scroll-mt-24 py-8 border-t border-[#3b3b3b] bg-[#454545] text-white">
@@ -523,6 +550,93 @@
     if (e.key === 'ArrowLeft')  slide('prev');
   });
 })();
+/* Team Carousel (center highlighted, sides dimmed + arrows) */
+(function () {
+  const track        = document.getElementById('team-track');
+  const leftFrame    = document.getElementById('team-left-frame');
+  const centerFrame  = document.getElementById('team-center-frame');
+  const rightFrame   = document.getElementById('team-right-frame');
+  const leftContent  = document.getElementById('team-left-content');
+  const centerContent= document.getElementById('team-center-content');
+  const rightContent = document.getElementById('team-right-content');
+  const leftArrow    = document.getElementById('team-left-arrow');
+  const rightArrow   = document.getElementById('team-right-arrow');
+  if (!track || !leftFrame || !centerFrame || !rightFrame) return;
+
+  // Team-Daten (du kannst beliebig erweitern)
+  const teamMembers = [
+    {
+      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f63627a7ba28632f9a55_Moritz.png",
+      name: "Moritz",
+      role: "Geschäftsführung"
+    },
+    {
+      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f66660dd7064712fdc6b_Philipp.png",
+      name: "Phillipp",
+      role: "Head of People and Culture"
+    },
+    {
+      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f67e7f1370c520ce363f_Paul.png",
+      name: "Paul",
+      role: "Head of Troubleshooting"
+    }
+  ];
+  if (!teamMembers.length) return;
+
+  const mod = (n, m) => ((n % m) + m) % m;
+  let index = 0;
+  let animating = false;
+  const DURATION = 520;     // ms
+  const SHIFT = '-33.333%'; // eine Slide
+
+  function cardHTML(item, { center = false } = {}) {
+    // Bild bei den Seiten-Karten entsättigen, Text bleibt normal
+    const imgCommon = "w-full h-56 object-cover rounded-xl";
+    const imgClass = center ? imgCommon : (imgCommon + " grayscale");
+    return `
+      <div class="p-5 md:p-6">
+        <img class="${imgClass}" src="${item.img}" alt="${item.name}" />
+        <h3 class="mt-4 font-semibold text-slate-900">${item.name}</h3>
+        <p class="text-sm text-slate-600">${item.role}</p>
+      </div>
+    `;
+  }
+
+  function render() {
+    const leftIndex  = mod(index - 1, teamMembers.length);
+    const rightIndex = mod(index + 1, teamMembers.length);
+
+    leftContent.innerHTML   = cardHTML(teamMembers[leftIndex],  { center: false });
+    centerContent.innerHTML = cardHTML(teamMembers[index],      { center: true  });
+    rightContent.innerHTML  = cardHTML(teamMembers[rightIndex], { center: false });
+  }
+
+  function slide(direction) {
+    if (animating) return;
+    animating = true;
+
+    track.style.transform = `translateX(${direction === 'next' ? SHIFT : '33.333%'})`;
+
+    setTimeout(() => {
+      index = mod(index + (direction === 'next' ? 1 : -1), teamMembers.length);
+      render();
+
+      track.style.transition = 'none';
+      track.style.transform  = 'translateX(0)';
+      track.getBoundingClientRect();
+      track.style.transition = '';
+      animating = false;
+    }, DURATION);
+  }
+
+  // Initial
+  render();
+
+  // Interaktionen (nur Pfeile / Karten, KEIN globales Keyboard, damit es nicht mit dem Video kollidiert)
+  [leftArrow, leftFrame].forEach(el => el && el.addEventListener('click', () => slide('prev')));
+  [rightArrow, rightFrame].forEach(el => el && el.addEventListener('click', () => slide('next')));
+})();
+
 
     </script>
   </body>
