--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
               <video
                 class="block w-full aspect-video object-cover"
                 autoplay muted loop playsinline preload="auto"
-                poster="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1200&auto=format&fit=crop">
-                <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
-                Ihr Browser unterstützt das Video-Tag nicht.
+                poster="https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/Rhodius_v1gimj.jpg">
+                <source src="https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/RHODIUS_et3ds2.mp4" type="video/mp4" />
               </video>
             </div>
           </div>
@@ -154,12 +153,12 @@
       </div>
     </section>
 
-    <!-- Video-Referenzen (Carousel) -->
+    <!-- Video-Beispiele (Carousel) -->
     <section id="videos" class="pt-20 sm:pt-28 pb-28 sm:pb-36 bg-gradient-to-b from-white to-efly/[0.04] border-t border-slate-200">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-end justify-between gap-4">
       <div>
-        <h2 class="text-2xl sm:text-3xl font-semibold">Video-Referenzen</h2>
+        <h2 class="text-2xl sm:text-3xl font-semibold">Video Beispiele</h2>
         <p class="mt-2 text-slate-600">mittlere Video spielt automatisch.</p>
       </div>
     </div>
@@ -220,28 +219,124 @@
   </div>
 </section>
 
-    <!-- Bild-Gitter (Platzhalter) -->
-    <section id="bilder" class="py-20 sm:py-28 bg-slate-50 border-t border-slate-200">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="flex items-end justify-between gap-4">
-          <div>
-            <h2 class="text-2xl sm:text-3xl font-semibold">Bild-Referenzen</h2>
-            <p class="mt-2 text-slate-600">Platzhalter – später ersetzen.</p>
-          </div>
-          <a href="#kontakt" class="hidden sm:inline-flex text-sm text-efly hover:text-efly">Projekt anfragen →</a>
-        </div>
-        <div class="mt-8 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 1"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 2"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 3"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 4"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 5"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 6"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 7"/>
-          <img class="w-full h-48 object-cover rounded-xl" src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Referenzbild 8"/>
-        </div>
+<!-- Content Beispiele (3 per row, big cards, last row centered) -->
+<section id="bilder" class="py-20 sm:py-28 bg-slate-50 border-t border-slate-200">
+  <div class="max-w-screen-2xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex items-end justify-between gap-4">
+      <div>
+        <h2 class="text-2xl sm:text-3xl font-semibold">Content Beispiel</h2>
+        <p class="mt-2 text-slate-600">Platzhalter – später ersetzen.</p>
       </div>
-    </section>
+      <a href="#kontakt" class="hidden sm:inline-flex text-sm text-efly hover:text-efly">Projekt anfragen →</a>
+    </div>
+
+    <!-- Grid: 1 col mobile, 2 cols tablet, 3 cols desktop -->
+    <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 justify-items-center">
+
+      <!-- Card 1 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png" alt="Märklin Markengeschichte"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/07_Ma%CC%88rklin_Markengeschichte_ufvqkz.png" alt="Märklin Markengeschichte Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 2 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png" alt="STUR Galeriebilder"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/01_STUR_Galeriebilder_m17hws.png" alt="STUR Galeriebilder Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 3 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png" alt="everydays Galeriebilder"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/03_everydays_Galeriebilder_vbq1gw.png" alt="everydays Galeriebilder Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 4 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png" alt="Liquid Elements Brand Store"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/10_Liquid_Elements_Brand_Store_wv7hez.png" alt="Liquid Elements Brand Store Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 5 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png" alt="Palado Markengeschichte"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/06_Palado_Markengeschichte_g0mlpa.png" alt="Palado Markengeschichte Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 6 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png" alt="Festool Brand Store"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/08_Festool_Brand_Store_c4cnz3.png" alt="Festool Brand Store Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 7 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png" alt="IONIQ A+ Content"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482205/05_IONIQ_A_Content_wobhk5.png" alt="IONIQ A+ Content Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 8 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png" alt="Dr. Beckmann Brand Store"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/09_Dr._Beckmann_Brand_Store_djyayg.png" alt="Dr. Beckmann Brand Store Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 9 -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png" alt="MaHo Galeriebilder"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/02_MaHo_Galeriebilder_t2qlk9.png" alt="MaHo Galeriebilder Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+      <!-- Card 10 (single centered on last row at lg: 3 cols) -->
+      <article class="group relative w-full rounded-2xl overflow-hidden bg-white border border-slate-200 shadow-soft transition-transform duration-300 will-change-transform hover:scale-[1.20] md:hover:scale-[1.22] hover:shadow-lg lg:col-start-2">
+        <div class="aspect-video relative">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png" alt="juno&me A+ Content"
+               class="absolute inset-0 h-full w-full object-cover transition-opacity duration-300 group-hover:opacity-0">
+          <img src="https://res.cloudinary.com/dujghnaly/image/upload/v1758482204/04_Juno_me_A_Content_wgcuaj.png" alt="juno&me A+ Content Poster"
+               class="absolute inset-0 h-full w-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-100">
+        </div>
+      </article>
+
+    </div>
+  </div>
+</section>
+
 
     <!-- Prozess-Teaser (statisch) -->
     <section id="prozess" class="py-20 sm:py-28 bg-slate-50 border-t border-slate-200">
@@ -474,16 +569,38 @@
 
   // Deine Videos
   const videoItems = [
-    { src: "https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4",
-      poster: "https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png",
-      label: "Big Buck Bunny" },
-    { src: "https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4",
-      poster: "https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png",
-      label: "Elephants Dream" },
-    { src: "https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4",
-      poster: "https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png",
-      label: "For Bigger Blazes" }
-  ];
+  {
+    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/PURIZE_Grade_film_egn1so.mp4",
+    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/Purize_ospblu.jpg",
+    label: "PURIZE"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/Muus_to_choose_vb0jj6.mp4",
+    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/Muus_to_Chooze_p01ba1.jpg",
+    label: "Muus to Choose"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/FEEL_FOOD_V2.1_vnrcdi.mp4",
+    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/FeelFood_fnjjnh.jpg",
+    label: "FEEL FOOD"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/CW_Claasen_jumvv0.mp4",
+    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/CS_Clasen_ndrlch.jpg",
+    label: "CW Claasen"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/260225_-_Dr.Beckmann_-_Final_DE_crbtc6.mp4",
+    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481363/Dr._Beckmann_mzskqt.jpg",
+    label: "Dr. Beckmann (DE)"
+  },
+  {
+    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/AFRI_ui4vc4.mp4",
+    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481363/Afri_Cola_f6pqt9.jpg",
+    label: "AFRI"
+  }
+];
+
   if (!videoItems.length) return;
 
   const mod = (n, m) => ((n % m) + m) % m;
@@ -493,19 +610,25 @@
   const SHIFT = '-33.333%';     // um 1 Slide verschieben
 
   function videoHTML(item, { center = false } = {}) {
-    if (center) {
-      return `
-        <video class="block w-full aspect-video object-cover"
-               autoplay muted loop playsinline preload="auto" poster="${item.poster}">
-          <source src="${item.src}" type="video/mp4" />
-        </video>`;
-    }
-    return `
-      <video class="block w-full aspect-video object-cover"
-             muted playsinline preload="metadata" poster="${item.poster}">
-        <source src="${item.src}" type="video/mp4" />
-      </video>`;
-  }
+  // item.src is your Cloudinary MP4 URL (with f_mp4,q_auto,vc_auto/… .mp4)
+  const mp4  = item.src;
+  const webm = item.src
+    .replace(/f_mp4/g, 'f_webm')
+    .replace(/vc_auto/g, 'vc_vp9')
+    .replace(/\.mp4(\?|$)/, '.webm$1');
+
+  // If you still see jank, switch 'metadata' -> 'none' on the side cards.
+  const preload = center ? 'auto' : 'metadata';
+
+  return `
+    <video class="block w-full aspect-video object-cover"
+           ${center ? 'autoplay' : ''} muted playsinline
+           preload="${preload}" poster="${item.poster}">
+      <source src="${webm}" type="video/webm" />
+      <source src="${mp4}"  type="video/mp4" />
+    </video>
+  `;
+}
 
   function render() {
     const leftIndex  = mod(index - 1, videoItems.length);
@@ -520,23 +643,30 @@
   }
 
   function slide(direction) {
-    if (animating) return;
-    animating = true;
+  if (animating) return;
+  animating = true;
 
-    track.style.transform = `translateX(${direction === 'next' ? SHIFT : '33.333%'})`;
-
-    setTimeout(() => {
-      index = mod(index + (direction === 'next' ? 1 : -1), videoItems.length);
-      render();
-
-      // Transition kurz aus, Position zurücksetzen, wieder an
-      track.style.transition = 'none';
-      track.style.transform  = 'translateX(0)';
-      track.getBoundingClientRect();
-      track.style.transition = '';
-      animating = false;
-    }, DURATION);
+  // Pause the currently playing center video before animating
+  const current = centerContent.querySelector('video');
+  if (current && !current.paused) {
+    try { current.pause(); } catch {}
   }
+
+  track.style.transform = `translateX(${direction === 'next' ? SHIFT : '33.333%'})`;
+
+  setTimeout(() => {
+    index = mod(index + (direction === 'next' ? 1 : -1), videoItems.length);
+    render(); // this injects the new center video
+
+    // Snap back without jank
+    track.style.transition = 'none';
+    track.style.transform  = 'translateX(0)';
+    track.getBoundingClientRect();
+    track.style.transition = '';
+    animating = false;
+  }, DURATION);
+}
+
 
   render();
 
