--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     decoding="async"
   />
   <span class="whitespace-nowrap">
-    eFLY Onepager
+    Amazon Content bei eFLY
   </span>
 </a>
          
@@ -105,13 +105,13 @@
 
           <!-- Hero-Text + Call-to-Action -->
           <div>
-            <p class="text-sm font-semibold tracking-wider text-efly">eine Marke der eFLY</p>
+            <p class="text-sm font-semibold tracking-wider text-efly">Eine Leistung der eFLY</p>
             <h1 class="mt-3 text-4xl sm:text-6xl font-extrabold tracking-tight text-slate-900">
 
-              placeholder 'Brand'
+              Amazon Content der konvertiert
             </h1>
             <p class="mt-4 text-base sm:text-lg text-slate-600">
-              Initial Draft OnePager: Referenzen, Team, Prozess & Kontakt. Feedback bitte wenn irgendwas nicht passt.
+              Wir realisieren für unsere Kunden mehr Umsatz, mehr Gewinn & bessere organische Rankings auf Amazon 
             </p>
             <div class="mt-8">
               <a href="#kontakt"
@@ -140,8 +140,7 @@
     <!-- Logo-Wall (reine Darstellung, Platzhalter) -->
     <section id="logos" class="py-20 sm:py-28 border-t border-slate-200 bg-white">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">Ausgewählte Marken</h2>
-        <p class="mt-2 text-slate-600">Platzhalter-Logos – später ersetzen.</p>
+        <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">Diese Marken vertrauen auf eFLY</h2>
         <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6 items-center">
           <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
           <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
@@ -158,8 +157,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-end justify-between gap-4">
       <div>
-        <h2 class="text-2xl sm:text-3xl font-semibold">Video Beispiele</h2>
-        <p class="mt-2 text-slate-600">mittlere Video spielt automatisch.</p>
+        <h2 class="text-2xl sm:text-3xl font-semibold">Amazon Video Ads</h2>
       </div>
     </div>
 
@@ -224,8 +222,7 @@
   <div class="max-w-screen-2xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-end justify-between gap-4">
       <div>
-        <h2 class="text-2xl sm:text-3xl font-semibold">Content Beispiel</h2>
-        <p class="mt-2 text-slate-600">Platzhalter – später ersetzen.</p>
+        <h2 class="text-2xl sm:text-3xl font-semibold">Content Beispiele</h2>
       </div>
       <a href="#kontakt" class="hidden sm:inline-flex text-sm text-efly hover:text-efly">Projekt anfragen →</a>
     </div>
@@ -342,27 +339,22 @@
     <section id="prozess" class="py-20 sm:py-28 bg-slate-50 border-t border-slate-200">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-2xl sm:text-3xl font-semibold">Ablauf der Zusammenarbeit</h2>
-        <p class="mt-2 text-slate-600">Vier Schritte – Platzhaltertexte.</p>
         <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
           <div class="rounded-2xl bg-white/90 backdrop-blur p-6 border border-white/60 shadow-soft hover:shadow-lg transition hover:-translate-y-0.5">
-            <div class="text-sm font-semibold text-efly">01 · Schritt1</div>
-            <h3 class="mt-2 font-semibold text-slate-900">Schritt1</h3>
-            <p class="mt-2 text-sm text-slate-600">Schritt1Erklärung.</p>
+            <div class="text-sm font-semibold text-efly">Schritt 1</div>
+            <h3 class="mt-2 font-semibold text-slate-900">Gemeinsame definierung der KPIs</h3>
           </div>
           <div class="rounded-2xl bg-white/90 backdrop-blur p-6 border border-white/60 shadow-soft hover:shadow-lg transition hover:-translate-y-0.5">
-            <div class="text-sm font-semibold text-efly">02 · Schritt2</div>
-            <h3 class="mt-2 font-semibold text-slate-900">Schritt2</h3>
-            <p class="mt-2 text-sm text-slate-600">Schritt2Erklärung.</p>
+            <div class="text-sm font-semibold text-efly">Schritt 2</div>
+            <h3 class="mt-2 font-semibold text-slate-900">Produkt Schulung</h3>
           </div>
           <div class="rounded-2xl bg-white/90 backdrop-blur p-6 border border-white/60 shadow-soft hover:shadow-lg transition hover:-translate-y-0.5">
-            <div class="text-sm font-semibold text-efly">03 · Schritt3</div>
-            <h3 class="mt-2 font-semibold text-slate-900">Schritt3</h3>
-            <p class="mt-2 text-sm text-slate-600">Schritt3Erklärung.</p>
+            <div class="text-sm font-semibold text-efly"> Schritt 3</div>
+            <h3 class="mt-2 font-semibold text-slate-900">Weekly Call</h3>
           </div>
           <div class="rounded-2xl bg-white/90 backdrop-blur p-6 border border-white/60 shadow-soft hover:shadow-lg transition hover:-translate-y-0.5">
-            <div class="text-sm font-semibold text-efly">04 · Schritt4</div>
-            <h3 class="mt-2 font-semibold text-slate-900">Schritt4</h3>
-            <p class="mt-2 text-sm text-slate-600">Schritt4Erklärung.</p>
+            <div class="text-sm font-semibold text-efly">Schritt 4</div>
+            <h3 class="mt-2 font-semibold text-slate-900">Gemeinsame Ziele ereichen</h3>
           </div>
         </div>
       </div>
@@ -372,8 +364,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-end justify-between gap-4">
       <div>
-        <h2 class="text-2xl sm:text-3xl font-semibold">Team (Auszug)</h2>
-        <p class="mt-2 text-slate-600">Später echte Namen, Rollen & Portraits einfügen.</p>
+        <h2 class="text-2xl sm:text-3xl font-semibold">Ansprechpartner</h2>
       </div>
       <a href="#kontakt" class="hidden sm:inline-flex text-sm text-efly hover:opacity-80">
         Kontakt →
@@ -445,7 +436,7 @@
         <!-- Zeile 1: Copyright · Kontakt-Buttons · Social Links -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center">
           <div class="text-sm text-white/80">
-            © <span id="y"></span> eFLY · Eine Marke der eFLY
+            © <span id="y"></span> eFLY · Eine Leistung der eFLY
           </div>
 
           <div class="flex flex-wrap gap-3 md:justify-center">
@@ -569,11 +560,6 @@
 
   // Deine Videos
   const videoItems = [
-  {
-    src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/PURIZE_Grade_film_egn1so.mp4",
-    poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/Purize_ospblu.jpg",
-    label: "PURIZE"
-  },
   {
     src: "https://res.cloudinary.com/dujghnaly/video/upload/f_mp4,q_auto,vc_auto/Muus_to_choose_vb0jj6.mp4",
     poster: "https://res.cloudinary.com/dujghnaly/image/upload/v1758481364/Muus_to_Chooze_p01ba1.jpg",
@@ -701,14 +687,14 @@
       role: "Geschäftsführung"
     },
     {
-      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f66660dd7064712fdc6b_Philipp.png",
-      name: "Phillipp",
-      role: "Head of People and Culture"
+      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f6544cd0d77b0c433510_Jonas.png",
+      name: "Jonas Lamneck",
+      role: "Co-Geschäftsführung"
     },
     {
-      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f67e7f1370c520ce363f_Paul.png",
-      name: "Paul",
-      role: "Head of Troubleshooting"
+      img: "https://cdn.prod.website-files.com/651e9b7ad3f55464374d3cbf/6825f702180be25a62e77e3c_Adi.png",
+      name: "Adrian Aubele",
+      role: "Prokurist"
     }
   ];
   if (!teamMembers.length) return;
