--- a/index.html
+++ b/index.html
@@ -168,12 +168,18 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <h2 class="text-3xl sm:text-4xl font-bold tracking-tight">Diese Marken vertrauen auf eFLY</h2>
         <div class="mt-8 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-6 items-center">
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
-          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6534fa896047abfdf86b1f22_header-logo-p-500.png" alt="Kundenlogo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73a7e06ce18e569c_63eb03f17c400f716d2082c8e52e755d_8.png" alt="Develey" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e07cf275f45896349_13.png" alt="Titan" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e73e8b461606df05f_a32a8c5ccc82fc58c70fde750a84623d_11.png" alt="Alphazoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9f0e26ccf806f5f712_f025d4d603e27e47859ffd5f395e734c_18.png" alt="Lillydoo" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e8397da8b3e62236e_3.png" alt="Fackelmann" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e12472cf8f113136e_12.png" alt="Edurino" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png" alt="Weber" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fbb70043f30e2e19c_15.png" alt="Ava&May" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e331bfcadfc375e97_8a49847f17bd7015a5320d5a60373b4c_14.png" alt="Loewe" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9e0de0526629ec0d73_5.png" alt="Liebscher" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png" alt="Weber" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
+          <img src="https://cdn.prod.website-files.com/651e9b79d3f55464374d3c75/6718ca9fc5bda19c8549af01_4.png" alt="Weber" class="h-16 w-full object-contain opacity-70 saturate-0 transition hover:opacity-100 hover:saturate-100"/>
         </div>
       </div>
     </section>
@@ -183,7 +189,6 @@
         <div class="flex items-end justify-between gap-4">
           <div>
             <h2 class="text-2xl sm:text-3xl font-semibold">Amazon Video Ads</h2>
-            <p class="mt-2 text-slate-600">Poster wird angezeigt – Video spielt beim Hover.</p>
           </div>
         </div>
     
@@ -253,7 +258,6 @@
     <div class="flex items-end justify-between gap-4">
       <div>
         <h2 class="text-2xl sm:text-3xl font-semibold">Content Beispiele</h2>
-        <p class="mt-2 text-slate-600">Durchklicken – mittlere Karte hervorgehoben.</p>
       </div>
     </div>
 
